[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scripts/yodo1mas.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/banner.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/interstitial.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/videorewarded.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/Yodo1_logo.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/whitebg.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/coin.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/privacy.png" type="Texture" id=9]
[ext_resource path="res://assets/fonts/ProximaNova-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/fonts/ProximaNova-Bold.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://scripts/privacy_controller.gd" type="Script" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.2, 0.2, 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 11 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "3D"
}

[node name="PrivacyController" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Orange" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0639648
margin_bottom = -15.2
color = Color( 1, 0.4, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnBannerAd" type="TextureButton" parent="CanvasLayer/Orange"]
margin_left = 25.0
margin_top = 25.0
margin_right = 225.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( 100, 44 )
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Orange/BtnBannerAd"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = 45.406
margin_right = 38.0
margin_bottom = 76.406
text = "Top Banner 
+  5 Coins"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnInterstitialAd" type="TextureButton" parent="CanvasLayer/Orange"]
margin_left = 250.0
margin_top = 25.0
margin_right = 400.0
margin_bottom = 275.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/Orange/BtnInterstitialAd"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -41.9463
margin_top = 1.60045
margin_right = 45.0537
margin_bottom = 32.6005
text = "Interstitial
+  10 Coins"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnRewardedAd" type="TextureButton" parent="CanvasLayer/Orange"]
margin_left = 25.0
margin_top = 150.0
margin_right = 225.0
margin_bottom = 350.0
rect_pivot_offset = Vector2( 100, 44 )
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Orange/BtnRewardedAd"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.0
margin_top = 69.0874
margin_right = 55.0
margin_bottom = 100.087
text = "Rewarded Video
+ 15 Coins"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnPrivacy" type="TextureButton" parent="CanvasLayer/Orange"]
margin_left = 453.373
margin_top = 225.029
margin_right = 677.373
margin_bottom = 462.029
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/Orange/BtnPrivacy"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -41.9463
margin_top = -1.01912
margin_right = 45.0537
margin_bottom = 29.9809
text = "Privacy Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo - background" type="TextureRect" parent="CanvasLayer/Orange"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -400.0
margin_top = -400.0
margin_right = 400.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 256, 256 )
texture = ExtResource( 7 )
expand = true

[node name="Logo" type="TextureRect" parent="CanvasLayer/Orange/Logo - background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.206
margin_top = 47.385
margin_right = -78.2059
margin_bottom = 177.385
rect_pivot_offset = Vector2( 210, 0 )
texture = ExtResource( 6 )
expand = true

[node name="Coins _Background" type="ColorRect" parent="CanvasLayer/Orange"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -176.0
margin_top = -47.0
margin_right = -10.0
margin_bottom = -10.0
color = Color( 0.341176, 0.341176, 0.341176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect - Coin" type="TextureRect" parent="CanvasLayer/Orange/Coins _Background"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -31.0204
margin_top = -27.8076
margin_right = 24.9796
margin_bottom = 28.1924
rect_rotation = 30.0
rect_pivot_offset = Vector2( 28, 28 )
texture = ExtResource( 8 )
expand = true

[node name="Coins" type="Label" parent="CanvasLayer/Orange/Coins _Background"]
margin_left = 24.1301
margin_top = 11.3013
margin_right = 160.13
margin_bottom = 30.3013
text = "Coins: 0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugOut" type="RichTextLabel" parent="CanvasLayer/Orange"]
modulate = Color( 0.453125, 0.227999, 0.227999, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -489.0
margin_top = 66.0
margin_right = -109.0
margin_bottom = 272.0
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PdGdpr" type="PopupDialog" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/PdGdpr"]
margin_top = 31.0
margin_right = 1019.0
margin_bottom = 411.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]
GDPR

This game personalizes your advertising experience through a couple of tools.
This help us make this game free, improve it and fix all bugs. By consenting to this enhanced experience you will see content that is more relevant to you. 

Depending on your privacy settings, our partners and tools may collect and process personal data such as device id, location data,  or other demographic and interest data about your to provide personalized experience such as advertisement and recommendations. 
[/center]"
text = "
GDPR

This game personalizes your advertising experience through a couple of tools.
This help us make this game free, improve it and fix all bugs. By consenting to this enhanced experience you will see content that is more relevant to you. 

Depending on your privacy settings, our partners and tools may collect and process personal data such as device id, location data,  or other demographic and interest data about your to provide personalized experience such as advertisement and recommendations. 
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PdGdpr_Yes" type="ColorPickerButton" parent="CanvasLayer/PdGdpr"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -350.0
margin_top = -150.0
margin_right = -150.0
margin_bottom = -80.0
color = Color( 0.0352941, 0.658824, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PdGdpr/PdGdpr_Yes"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Yes"
align = 1
valign = 1

[node name="PdGdpr_No" type="ColorPickerButton" parent="CanvasLayer/PdGdpr"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = -150.0
margin_right = -674.0
margin_bottom = -80.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PdGdpr/PdGdpr_No"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "No"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PdCoppa" type="PopupDialog" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/PdCoppa"]
margin_top = 100.0
margin_right = 1019.0
margin_bottom = 299.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]
COPPA

Please tell us if you are 13 or older
[/center]"
text = "
COPPA

Please tell us if you are 13 or older
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PdCoppa_Yes" type="ColorPickerButton" parent="CanvasLayer/PdCoppa"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -350.0
margin_top = -150.0
margin_right = -150.0
margin_bottom = -80.0
color = Color( 0.0352941, 0.658824, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PdCoppa/PdCoppa_Yes"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Yes"
align = 1
valign = 1

[node name="PdCoppa_No" type="ColorPickerButton" parent="CanvasLayer/PdCoppa"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = -150.0
margin_right = -674.0
margin_bottom = -80.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PdCoppa/PdCoppa_No"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "No"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PdCcpa" type="PopupDialog" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/PdCcpa"]
margin_top = 100.0
margin_right = 1019.0
margin_bottom = 299.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]
CCPA

Under The California Privacy ACt, you have the right to choose not to have your tdata shared with third-party service provicers. Press Opt-Out to stop to sharing of your personal data.

[/center]"
text = "
CCPA

Under The California Privacy ACt, you have the right to choose not to have your tdata shared with third-party service provicers. Press Opt-Out to stop to sharing of your personal data.

"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PdCcpa_Yes" type="ColorPickerButton" parent="CanvasLayer/PdCcpa"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -350.0
margin_top = -150.0
margin_right = -150.0
margin_bottom = -80.0
color = Color( 0.0352941, 0.658824, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PdCcpa/PdCcpa_Yes"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Yes"
align = 1
valign = 1

[node name="PdCcpa_No" type="ColorPickerButton" parent="CanvasLayer/PdCcpa"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = -150.0
margin_right = -674.0
margin_bottom = -80.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PdCcpa/PdCcpa_No"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "No"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yodo1Mas" type="Node" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}
app_id_ios = "BkFDs2l8K4k"
app_id_android = "emXSs0Md7ZC"
[connection signal="ended" from="PrivacyController" to="." method="_on_PrivacyController_ended"]
[connection signal="pressed" from="CanvasLayer/Orange/BtnBannerAd" to="." method="_on_BtnBannerAd_pressed"]
[connection signal="pressed" from="CanvasLayer/Orange/BtnInterstitialAd" to="." method="_on_BtnInterstitialAd_pressed"]
[connection signal="pressed" from="CanvasLayer/Orange/BtnRewardedAd" to="." method="_on_RewardedAd_pressed"]
[connection signal="pressed" from="CanvasLayer/PdGdpr/PdGdpr_Yes" to="PrivacyController" method="_on_PdGdpr_Yes_pressed"]
[connection signal="pressed" from="CanvasLayer/PdGdpr/PdGdpr_No" to="PrivacyController" method="_on_PdGdpr_No_pressed"]
[connection signal="pressed" from="CanvasLayer/PdCoppa/PdCoppa_Yes" to="PrivacyController" method="_on_PdCoppa_Yes_pressed"]
[connection signal="pressed" from="CanvasLayer/PdCoppa/PdCoppa_No" to="PrivacyController" method="_on_PdCoppa_No_pressed"]
[connection signal="pressed" from="CanvasLayer/PdCcpa/PdCcpa_Yes" to="PrivacyController" method="_on_PdCcpa_Yes_pressed"]
[connection signal="pressed" from="CanvasLayer/PdCcpa/PdCcpa_No" to="PrivacyController" method="_on_PdCcpa_No_pressed"]
[connection signal="banner_ad_closed" from="Yodo1Mas" to="." method="_on_Yodo1Mas_banner_ad_closed"]
[connection signal="banner_ad_error" from="Yodo1Mas" to="." method="_on_Yodo1Mas_banner_ad_error" binds= [ 0 ]]
[connection signal="banner_ad_not_loaded" from="Yodo1Mas" to="." method="_on_Yodo1Mas_banner_ad_not_loaded"]
[connection signal="banner_ad_opened" from="Yodo1Mas" to="." method="_on_Yodo1Mas_banner_ad_opened"]
[connection signal="interstitial_ad_closed" from="Yodo1Mas" to="." method="_on_Yodo1Mas_interstitial_ad_closed"]
[connection signal="interstitial_ad_error" from="Yodo1Mas" to="." method="_on_Yodo1Mas_interstitial_ad_error" binds= [ 0 ]]
[connection signal="interstitial_ad_not_loaded" from="Yodo1Mas" to="." method="_on_Yodo1Mas_interstitial_ad_not_loaded"]
[connection signal="interstitial_ad_opened" from="Yodo1Mas" to="." method="_on_Yodo1Mas_interstitial_ad_opened"]
[connection signal="rewarded_ad_closed" from="Yodo1Mas" to="." method="_on_Yodo1Mas_rewarded_ad_closed"]
[connection signal="rewarded_ad_earned" from="Yodo1Mas" to="." method="_on_Yodo1Mas_rewarded_ad_earned"]
[connection signal="rewarded_ad_error" from="Yodo1Mas" to="." method="_on_Yodo1Mas_rewarded_ad_error" binds= [ 0 ]]
[connection signal="rewarded_ad_not_loaded" from="Yodo1Mas" to="." method="_on_Yodo1Mas_rewarded_ad_not_loaded"]
[connection signal="rewarded_ad_opened" from="Yodo1Mas" to="." method="_on_Yodo1Mas_rewarded_ad_opened"]
